--- a/web/expoplatformweb/src/main/webapp/assets/css/app.css
+++ b/web/expoplatformweb/src/main/webapp/assets/css/app.css
@@ -4,6 +4,7 @@
     /*border-color: white;*/
     color: #10a0ea;
 }
-.am-g{
-    margin-top: 2px;
-}
+
+/*.am-g{*/
+    /*margin-top: 2px;*/
+/*}*/
