support sending mail with parameters

--- a/serverAPI/ExpoPlatform/src/main/resources/templates/reset.html
+++ b/serverAPI/ExpoPlatform/src/main/resources/templates/reset.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
+<p></p>
+<br>
+您发起了重置邮箱密码请求, 如果是您本人操作. 请点击一下链接完成重置密码操作.
+<br>
+http://www.d7w.net/index.php?g=Member&a=verifyemail&key=18d3m07bgzHDCOkL1Tr3hYhGxa6RkBLx%2Fa0wykOroR1ghHNdriAgujUlsl2zR3TZfa1oc%2Fdu8tnHi6ZbqHY
+<p></p>
+<br>
+如果这不是您本人操作, 请忽略该邮箱. 如有问题请发信admin@fmyoutu.com 谢谢
+<br>
+<br>
+<br>
+58阿童木团队
 
 </body>
 </html>
