--- a/serverAPI/ExpoPlatform/src/main/resources/templates/welcome.html
+++ b/serverAPI/ExpoPlatform/src/main/resources/templates/welcome.html
@@ -2,11 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Welcome</title>
+    <title>Title</title>
 </head>
 <body>
 
-Welcome! this is your first email.
+Hey, [username]
+<br>
+<br>
+欢迎您注册成为58阿童木用户, 您的账号需要邮箱认证, 点击下面链接进行认证：
+
+<br>
+<br>
+[http://www.d7w.net/index.php?g=Member&a=verifyemail&key=18d3m07bgzHDCOkL1Tr3hYhGxa6RkBLx%2Fa0wykOroR1ghHNdriAgujUlsl2zR3TZfa1oc%2Fdu8tnHi6ZbqHY
+]
+<br>
+<br>
+
+如果链接无法点击，请完整拷贝到浏览器地址栏里直接访问
+<br>
+<br>
+<br>
+如果这不是您本人操作, 请忽略这封邮件. 如有问题请联系 admin@fmyoutu.com
+<br>
+<br>
+<br>
+<br>
+58阿童木团队
 
 </body>
 </html>
