添加登录注册 header样式

--- a/web/expoplatformweb/src/main/webapp/assets/css/app.css
+++ b/web/expoplatformweb/src/main/webapp/assets/css/app.css
@@ -4,6 +4,9 @@
     /*border-color: white;*/
     color: #10a0ea;
 }
+.hw-menu{
+    background-color: white;
+}
 
 /*.am-g{*/
     /*margin-top: 2px;*/
