--- a/atm_frontend/app/front-css/index.less
+++ b/atm_frontend/app/front-css/index.less
@@ -2,7 +2,7 @@
 
 
 .header {
-  height: 300px;
+  height: 250px;
 
   .header_title {
     height: 35px;
@@ -60,6 +60,12 @@
         height: 150px;
         text-align: center;
         line-height: 60px;
+        input {
+          height: 35px;
+          margin-top: 40px;
+          color: darkgray;
+          text-align: center;
+        }
       }
 
       .header_main_right_nav {
@@ -83,4 +89,13 @@
   }
 
 
+}
+
+.foot {
+
+  height: 200px;
+  width: 100%;
+  border-top: solid 1px lightgray;
+  float: left;
+  margin-top: 100px;
 }
