api integration for events, login, register, profile

--- a/atm_web/public/css/index.less
+++ b/atm_web/public/css/index.less
@@ -5,7 +5,7 @@
   height: 250px;
 
   .header_title {
-    height: 35px;
+    height: 40px;
     width: 100%;
     border-bottom: solid 1px lightgray;
     padding: 5px;
@@ -20,10 +20,17 @@
     }
 
     .header_title_right {
-      width: 35%;
+      width: 40px;
       float: right;
-      padding-right: 5%;
+      margin-right: 2%;
       text-align: right;
+      height: 40px;
+      border: solid 1px darkgrey;
+      border-radius: 50%;
+      font-size: 14px;
+      overflow-x: hidden;
+      text-align: center;
+      overflow-wrap: break-word;
     }
   }
 
