--- a/atm_web/public/css/profile/p_default.less
+++ b/atm_web/public/css/profile/p_default.less
@@ -200,6 +200,20 @@
             li {
               list-style: none;
             }
+
+            .msg {
+              margin: 10px 10px;
+              font-size: 14px;
+              span {
+                background-color: #38978D;
+                height: 8px;
+                width: 8px;
+                float: left;
+                margin: 7px;
+              }
+            }
+
+
           }
 
         }
