--- a/atm_web/public/views/account/login.html
+++ b/atm_web/public/views/account/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="atm_login">
+<html ng-app="atm">
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -8,10 +8,13 @@
     <script src="../../js/common/angular.min.js"></script>
     <script src="../../js/common/angular-route.min.js"></script>
     <script src="../../js/common/angular-cookies.min.js"></script>
+    <script src="../../js/common/ngKookies.min.js"></script>
     <script src="../../js/common/angular-resource.min.js"></script>
     <script src="../../js/common/angular-css.min.js"></script>
-    <script src="../../js/controllers/loginController.js"></script>
     <script src="../../js/app.js"></script>
+    <script src="../../js/controllers/atmController.js"></script>
+    <script src="../../js/controllers/loginController.js"></script>
+
 
     <div class="header">
 
