--- a/atm_web/public/css/event/event.css
+++ b/atm_web/public/css/event/event.css
@@ -37,6 +37,7 @@
   margin: 5px;
   border: solid 1px lightgrey;
   padding: 3px;
+  cursor: pointer;
 }
 .company .company_filter .company_filter_type {
   width: 100%;
@@ -90,7 +91,7 @@
 .company .company_main .company_main_left .company_main_left_info .company_main_left_info_desc {
   width: 50%;
   float: left;
-  padding: 0px 15px;
+  padding: 0px 25px;
   height: 186px;
 }
 .company .company_main .company_main_left .company_main_left_info .company_main_left_info_desc .company_main_left_info_desc_name,
@@ -134,6 +135,9 @@
   text-align: left;
   width: 100%;
 }
+.company .company_main .company_main_nav .company_main_nav_pages {
+  margin: 10px 0px;
+}
 .company .company_main .company_main_nav .company_main_nav_pages li {
   line-height: 2px;
   list-style: none;
@@ -142,6 +146,19 @@
   font-size: 15px;
   border-bottom: solid 1px lightgrey;
   padding: 8px 5px;
+}
+.company .company_main .company_main_nav .company_main_nav_pages nav {
+  position: relative;
+  width: 100%;
+  height: 50px;
+}
+.company .company_main .company_main_nav .company_main_nav_pages .pagination {
+  right: 0px;
+  position: absolute;
+  top: -30px;
+}
+.company .company_main .company_main_nav .company_main_nav_pages nav li {
+  cursor: pointer;
 }
 .company .company_main .company_main_nav .company_main_nav_go {
   float: right;
