--- a/atm_web/public/css/event/event.less
+++ b/atm_web/public/css/event/event.less
@@ -42,6 +42,7 @@
           margin: 5px;
           border: solid 1px lightgrey;
           padding: 3px;
+          cursor: pointer;
         }
       }
     }
@@ -113,7 +114,7 @@
 
           width: 50%;
           float: left;
-          padding: 0px 15px;
+          padding: 0px 25px;
           height: 186px;
           .company_main_left_info_desc_name, .company_main_left_info_desc_date, .company_main_left_info_desc_type_ {
 
@@ -172,6 +173,8 @@
       //padding-left: 25%;
       .company_main_nav_pages {
 
+        margin: 10px 0px;
+
         li {
           line-height: 2px;
           list-style: none;
@@ -181,6 +184,21 @@
           border-bottom: solid 1px lightgrey;
           padding: 8px 5px;
         }
+
+        nav {
+          position: relative;
+          width:100%;
+          height: 50px;
+        }
+        .pagination {
+          right: 0px;
+          position: absolute;
+          top: -30px;
+        }
+        nav li {
+          cursor: pointer;
+        }
+
       }
 
       .company_main_nav_go {
