--- a/atm_web/public/css/index.css
+++ b/atm_web/public/css/index.css
@@ -2,7 +2,7 @@
   height: 250px;
 }
 .header .header_title {
-  height: 35px;
+  height: 40px;
   width: 100%;
   border-bottom: solid 1px lightgray;
   padding: 5px;
@@ -15,10 +15,17 @@
   padding-right: 20%;
 }
 .header .header_title .header_title_right {
-  width: 35%;
+  width: 40px;
   float: right;
-  padding-right: 5%;
+  margin-right: 2%;
   text-align: right;
+  height: 40px;
+  border: solid 1px darkgrey;
+  border-radius: 50%;
+  font-size: 14px;
+  overflow-x: hidden;
+  text-align: center;
+  overflow-wrap: break-word;
 }
 .header .header_main {
   height: 190px;
