--- a/atm_web/public/css/profile/p_default.css
+++ b/atm_web/public/css/profile/p_default.css
@@ -162,6 +162,17 @@
 .profile .profile_right .profile_right_msg .profile_right_msg_list .profile_right_msg_list_info .profile_right_msg_list_info_desc li {
   list-style: none;
 }
+.profile .profile_right .profile_right_msg .profile_right_msg_list .profile_right_msg_list_info .profile_right_msg_list_info_desc .msg {
+  margin: 10px 10px;
+  font-size: 14px;
+}
+.profile .profile_right .profile_right_msg .profile_right_msg_list .profile_right_msg_list_info .profile_right_msg_list_info_desc .msg span {
+  background-color: #38978D;
+  height: 8px;
+  width: 8px;
+  float: left;
+  margin: 7px;
+}
 .profile .profile_right .profile_right_feedback {
   margin: 55px 25px;
   border-top: solid 1px lightgray;
