--- a/atm_web/public/views/account/register.html
+++ b/atm_web/public/views/account/register.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="atm_register">
+<html lang="en" ng-app="atm">
 <head>
     <meta charset="UTF-8">
     <title></title>
@@ -8,8 +8,15 @@
     <script src="../../js/common/angular.min.js"></script>
     <script src="../../js/common/angular-route.min.js"></script>
     <script src="../../js/common/angular-resource.min.js"></script>
+    <script src="../../js/common/angular-cookies.min.js"></script>
+    <script src="../../js/common/ngKookies.min.js"></script>
     <script src="../../js/common/angular-css.min.js"></script>
+    <script src="../../js/app.js"></script>
+    <script src="../../js/controllers/atmController.js"></script>
     <script src="../../js/controllers/registerController.js"></script>
+
+
+
 
     <div class="header">
 
@@ -51,7 +58,7 @@
                     <input type="text" ng-model="phoneForm.scCode" name="scCode" id="register-form-scCode"/>
                     <button type="button" class="sendScCode" ng-click="sendVerifyCode()">获取验证码</button>
                 </div>
-                <div class="g-div validation_msg" style="color:red; float: left;"></div>
+                <div class="g-div validation_msg" style="font-size:12px; color:red; float: left;"></div>
                 <div class="register_main_phone_form_submit">
                     <input type="submit" id="phone-submit" value="同意协议并注册"/>
                 </div>
