--- a/atm_web/public/css/event/event.less
+++ b/atm_web/public/css/event/event.less
@@ -103,6 +103,7 @@
             padding: 10px;
             height: 170px;
             width: 100%;
+            cursor: pointer;
           }
           //padding: 5px;
           //background-position-y: 50%;
@@ -125,6 +126,17 @@
           .company_main_left_info_desc_foot {
 
             margin-top: 18px;
+            img {
+              width: 20px;
+              height: 20px;
+              float: left;
+              margin-right: 10px;
+              padding: 1px;
+            }
+
+            .pageView {
+              float: right;
+            }
           }
         }
       }
