--- a/atm_web/public/css/event/event_d.less
+++ b/atm_web/public/css/event/event_d.less
@@ -8,7 +8,7 @@
   width: 96%;
   margin: 45px 2%;
   min-height: 600px;
-  border-top: solid 1px lightgray;
+  //border-top: solid 1px lightgray;
   .event_d_left {
 
     width: 30%;
@@ -16,6 +16,7 @@
     float: left;
     div {
       margin: 8px 0px;
+      font-size: 14px;
     }
   }
 
@@ -24,6 +25,7 @@
     width: 70%;
     min-height: 600px;
     float: left;
+    font-size: 14px;
     .event_d_right_logo {
 
       margin: 15px;
